# sigsynth

./: .gitignore  Makefile  README.md  TROUBLESHOOTING.md  USAGE.md  pyproject.toml  sigsynth.example.yaml  sigsynth.yaml
examples/: aws_cloudtrail_change.yml
panther_tests/: test_000.json  test_001.json  test_002.json  test_003.json  test_004.json  test_005.json  test_006.json  test_007.json  test_008.json  test_009.json  test_010.json  test_011.json  test_012.json  test_013.json  test_014.json  test_015.json  test_016.json  test_017.json  test_018.json  test_019.json  test_020.json  test_021.json  test_022.json  test_023.json  test_024.json  test_025.json  test_026.json  test_027.json  test_028.json  test_029.json  test_030.json  test_031.json  test_032.json  test_033.json  test_034.json  test_035.json  test_036.json  test_037.json  test_038.json  test_039.json  (+160 more)
sigsynth/: __init__.py  __main__.py  batch_processor.py  cli.py  config.py  expander.py  panther_formatter.py  parser.py  review.py  seed_generator.py  validator.py
sigsynth/debug/: __init__.py  analyzer.py  reporter.py  tracer.py
tests/: test_cli.py  test_expander.py  test_panther_formatter.py  test_parser.py  test_seed_generator.py  test_validator.py
